    - if old/leftover /etc/bash_command_found_found is there,
      remove it (LP: #379851)
  * debian/rules:
    - build with DH_PYCENTRAL=include-links 
  * CommandNotFound/util.py:
    - use try gettext if lgettext fails (LP: #282446)
  * debian/copyright: 
    - fix location (LP: #314478)
  * CommandNotFound/CommandNotFound.py:
    - be more robust about missing priority.txt (LP: #359784)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 26 Jun 2009 08:33:13 +0200

command-not-found (0.2.35ubuntu2) karmic; urgency=low

  * scan.data: updated for alpha-2

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 08 Jun 2009 11:58:06 +0200

command-not-found (0.2.35ubuntu1) karmic; urgency=low

  * zsh_command_not_found:
    - Use the pseudo-namespace prefix cnf_ for everything.
    - Append the preexec/precmd functions to zsh’s pre*_functions arrays,
      allowing other pre* functions to be used simultaneously.

 -- Johan Kiviniemi <debian@johan.kiviniemi.name>  Fri, 15 May 2009 22:13:00 +0300

command-not-found (0.2.34ubuntu3) jaunty; urgency=low

  * scan.data:
    - updated for RC

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 17 Apr 2009 10:11:13 +0200

command-not-found (0.2.34ubuntu2) jaunty; urgency=low

  * scan.data:
    - updated to current jaunty 

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 07 Apr 2009 21:58:51 +0200

command-not-found (0.2.34ubuntu1) jaunty; urgency=low

  * CommandNotFound/CommandNotFound.py:
    - support "priority.txt" file that allows basic priority
      ordering in the output
  * data/priority.txt:
    - add initial version with "openjdk-6-jdk" (LP: #318442)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 23 Mar 2009 13:45:26 +0100

command-not-found (0.2.33ubuntu3) jaunty; urgency=low

  * scan.data:
    - updated for jaunty beta
  * suggest pythonX.Y instead of pythonX.Y-minimal when
    "pythonX.Y" is not found

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 23 Mar 2009 11:07:26 +0100
